some style bug on mobile

--- a/assets/styles/_main.scss
+++ b/assets/styles/_main.scss
@@ -15,7 +15,7 @@
     #burger{
         background-color: $thirdColor;
         border-radius: 50%;
-        z-index: 1;
+        z-index: 2;
         width: 90px;
         height: 90px;
         margin-right: 1em;
@@ -63,6 +63,7 @@
         }
     }
     ul{
+        z-index: 1;
         display: flex;
         flex-direction: column;
         position: absolute;
@@ -245,6 +246,7 @@ body{
         color: #EB5F4E;
     }
     .star-container{
+        z-index: -1;
         margin-top: 1em;
         margin: auto;
         width: min-content;
@@ -273,6 +275,8 @@ body{
         text-transform: uppercase;
     }
     .server-description{
+        width: 85%;
+        margin: auto;
         background-color: $thirdColor;
         color: black;
         padding: 1em;
